[SYNCOPE-879] Fixed on Chromium as well: it seems that autocomplete fields have issues with Chrom(ium) and z-index management

--- a/client/console/src/main/resources/META-INF/resources/css/syncopeConsole.css
+++ b/client/console/src/main/resources/META-INF/resources/css/syncopeConsole.css
@@ -438,6 +438,7 @@ div.searchResult{
   font-size: 14px;
   min-width: 160px;
   max-height: 250px;
+  z-index: 7001 !important;
 }
 
 div.wicket-aa ul {
